# hermes

./: .gitignore  CHANGELOG.md  CLANS.md  CONTRIBUTING.md  README.md  SECURITY.md  glama.json  quest005_hub_client.py
.github/workflows/: ci.yml
docs/: AGENT-PROTOCOLS-COMPARISON.md  AGENT-STRUCTURE.md  ARCHITECTURE.md  ATR-KEP-001-KNOWLEDGE-EXCHANGE-v1.0.md  BRAND-MANUAL.md  DANI-HERMES-005.md  DANI-HERMES-010.md  ETHICS.md  EVOLUTION-PLAN.md  EXPANSION-ROUTES.md  FIRST-CONTACT-PLAN.md  GETTING-STARTED.md  GLOSSARY.md  INDUSTRY-RESEARCH.md  MANIFESTO.md  MULTI-CLAN.md  POSITIONING.md  PROTOCOL-INTEGRATION-STRATEGY.md  QUEST-002-AAD-BILATERAL.md  QUEST-003-ECDHE-FORWARD-SECRECY.md  QUEST-004-CLAUDE-CODE-ASSESSMENT.md  QUEST-005-KNOWLEDGE-EXCHANGE.md  QUEST-CROSS-001-CTO-REVIEW.md  QUICKSTART.md  RESEARCH-AGENDA.md  USE-CASES-PRESENTATION.md  USE-CASES.md  agent-registration-guide.md  atr-q931-sent-receipt-test-vector.md  clan-alignment-guide.md  hub-operations.md  jei-environment-assessment.md  quest-cross-002-multicast.md  s2s-onboarding-jei.md  wire-protocol-hub.md
docs/architecture/: bilateral-issues-plan.md  installable-model.md  signaling-plane-outline.md
docs/assessment/: 2026-04-03-assessment.md  TRACKER.md  hermes-assessment-chain.md
docs/brand/: clan-momoshod-brand.md
docs/comms/: 2026-03-15_QUEST-002_PING_JEI.md  2026-03-16_QUEST-003_KICKOFF_JEI.md  2026-03-18_HERMES-INSTALL_JEI.md  2026-03-18_QUEST-004_KICKOFF_JEI.md  2026-04-16_sunset_canonical.cast  2026-05-02_qc002_bachue_fixtures_jei.md  2026-05-02_qc002_bruja_audit_jei.md  2026-05-02_qc002_remediation_plan.md  BILATERAL-LOG-2026-04-02.md  BR-010_JEI_ONBOARDING_OPTIONS.md  BR-018_REAL-TIME_ARCHITECTURE.md  QUEST-005-COMPARATIVE-ANALYSIS.md  quest005_artifact_dani.json  quest005_artifact_jei_decrypted.json
docs/comms/2026-05-02_qc002_jei_blockers_resueltos/: AUDIT_QUEST-CROSS-002_ASI02_ASI03_v1.0.md  REPORT_FINAL_DANI_2026-05-02.md  TEST_PLAN_QUEST-CROSS-002_v1.0.md
docs/diagrams/: README.md  arch-5-layer-stack.md  arch-triple-plane.md  explorer-wireframes.md  seq-0793-session-lifecycle.md  seq-2314-cups-quest-dispatch.md  seq-3022-gateway-cross-clan.md  seq-4601-agent-node.md  seq-5322-message-lifecycle.md  seq-8446-crypto-seal-open.md  uc-01-sovereign-clan-setup.md  uc-02-cross-clan-collaboration.md  uc-03-bridge-a2a-mcp.md  uc-04-agent-node-daemon.md  uc-05-quest-dispatch.md
docs/diagrams/d2/: adapter-bridge.d2  agent-node-stack.d2  control-vs-data-plane.d2  crypto-seal.d2  cups-three-planes.d2  dual-reputation.d2  firewall-model.d2  five-layer-stack.d2  gateway-clan-boundary.d2  gateway-nat.d2  hub-peer-auth.d2  message-lifecycle.d2  namespace-topology.d2  quest-lifecycle.d2  session-lifecycle.d2  session-state-machine.d2
docs/guides/: local-llm-setup.md
docs/quests/: QUEST-000.md
docs/research/l3-channel-efficiency/: README.md  overhead_model.py
docs/shared-skills/claude-sensei/knowledge/: amaru-integration.md  clan-impact.md  hermes-integration.md  kairos-migration-spec.md  skill-factory-vision.md
docs/templates/: quest-005-prompt-chain.md
examples/: com.hermes.agent-node.plist  com.hermes.hub-listen.plist  com.hermes.hub.plist  cursor-mcp.json  demo-local-swarm.md  routes-sample.md  simple_agent.py
quests/: QUEST-AMARU-001.md
reference/python/: pyproject.toml
reference/python/amaru/: __init__.py  __main__.py  adapter.py  agent.py  agora.py  asp.py  bridge.py  bus.py  cli.py  config.py  crypto.py  dojo.py  gateway.py  hooks.py  hub.py  installer.py  integrity.py  mcp_server.py  message.py  sync.py  terminal.py
reference/python/amaru/llm/: __init__.py  adapters.py  skill.py  telemetry.py
reference/python/hermes/: __init__.py  adapter.py  agent.py  agora.py  asp.py  bridge.py  bus.py  cli.py  config.py  crypto.py  dojo.py  gateway.py  hooks.py  hub.py  installer.py  integrity.py  mcp_server.py  message.py  sync.py  terminal.py
reference/python/hermes/llm/: __init__.py  adapters.py  skill.py  telemetry.py
reference/python/tests/: conftest.py  test_adapter.py  test_agent.py  test_agora.py  test_asp.py  test_bilateral.py  test_bridge.py  test_bus.py  test_cli.py  test_config.py  test_conformance.py  test_crypto.py  test_crypto_kci_v2.py  test_dojo.py  test_gateway.py  test_hooks.py  test_hub.py  test_installer.py  test_integrity.py  test_llm.py  test_mcp_server.py  test_message.py  test_skill.py  test_sync.py  test_telemetry.py  test_terminal.py  test_transport.py
scripts/: hub_send.py  hub_turn.py  init_amaru.sh  init_hermes.sh  quest005_bilateral_auto.py  quest005_hub_client.py  quest005_hub_mcp.py
spec/: AES-2040.md  ARC-0001.md  ARC-0369.md  ARC-0370.md  ARC-0791.md  ARC-0793.md  ARC-1122.md  ARC-1918.md  ARC-2119.md  ARC-2314.md  ARC-2606.md  ARC-3022.md  ARC-4601.md  ARC-5322.md  ARC-7231.md  ARC-8446.md  ARC-9001.md  ATR-G711.md  ATR-Q700.md  ATR-Q931.md  ATR-X200.md  INDEX.md
tools/: demo-bilateral.sh  demo-recording.sh  explorer.html
