[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-protocol"
version = "0.4.2a1"
description = "HERMES: A lightweight, file-based inter-agent communication protocol"
readme = {text = "HERMES reference implementation. See https://github.com/dereyesm/hermes", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Daniel Reyes", email = "danielreyesma@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cryptography>=41.0",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/dereyesm/hermes"
Repository = "https://github.com/dereyesm/hermes"
Issues = "https://github.com/dereyesm/hermes/issues"

[project.scripts]
hermes = "hermes.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
