[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-protocol"
version = "0.4.2a1"
description = "HERMES: A lightweight, file-based inter-agent communication protocol"
readme = {text = "HERMES reference implementation. See https://github.com/dereyesm/hermes", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Daniel Reyes", email = "danielreyesma@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cryptography>=41.0",
    "rich>=13.0",
    "tomli-w>=1.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.42.0",
    "google-genai>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=6.0",
    "ruff==0.9.10",
    "mypy==1.15.0",
]

[project.urls]
Homepage = "https://github.com/dereyesm/hermes"
Repository = "https://github.com/dereyesm/hermes"
Issues = "https://github.com/dereyesm/hermes/issues"

[project.scripts]
hermes = "hermes.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hermes --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # bugbear
    "SIM",   # simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM105", # contextlib.suppress — try/except/pass is clearer in daemon shutdown code
    "SIM108", # ternary operator — often hurts readability for multi-line conditions
    "RUF015", # prefer next() over [0] — style preference, not a bug
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hermes.crypto"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "hermes.agent"
ignore_errors = true
